tui/src/views/snapshots/toon_console_tui__views__new_workload__tests__snapshot_form_for_a_template_that_offers_no_ssh.snap
---
source: src/views/new_workload.rs
expression: render(&state)
---
┌ smoke-http ──────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Fixed by the publisher:                                                                                               │
│  MODE=production                                                                                                     │
│                                                                                                                      │
│SITE_TITLE: ▏                                                                                                         │
│smoke-http does not offer SSH, so no key is asked for.                                                                │
│Volume (GB, optional): …                                                                                              │
│                                                                                                                      │
│ Preview the spawn                                                                                                    │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
