tui/src/views/snapshots/toon_console_tui__views__new_workload__tests__snapshot_form_with_a_validation_error.snap
---
source: src/views/new_workload.rs
expression: render(&state)
---
┌ static-site ─────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Fixed by the publisher:                                                                                               │
│  MODE=production                                                                                                     │
│                                                                                                                      │
│SITE_TITLE: …                                                                                                         │
│SSH public key: …                                                                                                     │
│  Required — no password is ever issued for a workload (spec §6.2).                                                   │
│Volume (GB, optional): …                                                                                              │
│                                                                                                                      │
│ Preview the spawn                                                                                                    │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
