tui/src/views/snapshots/toon_console_tui__views__new_workload__tests__snapshot_gallery.snap
---
source: src/views/new_workload.rs
expression: render(&state)
---
┌ Templates ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│static-site — Acme (available)                                                                                        │
│broken-image — Acme (unavailable)                                                                                     │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
