tui/src/views/snapshots/toon_console_tui__views__new_workload__tests__snapshot_preflight.snap
---
source: src/views/new_workload.rs
expression: render(&state)
---
┌ Preflight ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Local only: no                                                                                                        │
│                                                                                                                      │
│Route: g.toon.provider.basic.v1.spawn                                                                                 │
│1000 µUSDC for 3600 s.                                                                                                │
│                                                                                                                      │
│ s: spawn (asks for confirmation)                                                                                     │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
